--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"start": "react-scripts start",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"postinstall": "react-scripts build"
+		"heroku-postbuild": "react-scripts build"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
