--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"start": "react-scripts start",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
+		"build": "react-scripts build",
 		"heroku-postbuild": "react-scripts build"
 	},
 	"eslintConfig": {
