--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # The backend is running on heroku, uncomment the following variable if you want to try that
 # (might take a second for it to start up, in case it has not been used for a little bit)
-#REACT_APP_API_URL=https://ancient-wave-00930.herokuapp.com/
+REACT_APP_API_URL=https://ancient-wave-00930.herokuapp.com/
 
 # Use this variable if you want to run it on localhost
-#REACT_APP_API_URL=http://localhost:8080/
+# REACT_APP_API_URL=http://localhost:8080/
